--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 </head>
 
 <body>
+	<div id="loader">🍰 Loading Cake...</div>
+	
 	<div class="wrapper" data-tor-group="
     .piece =>
       rotateZ(/+30/deg) translateZ(-100vh)
